--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ body {
   color: white;
   background-color: var(--charcole-grey);
   font-size: 16px;
+  font-weight: bold;
   transition: transform 0.3s ease, box-shadow 0.2s ease;
 }
 
